Closes-Bug: #1554468 - Fixed the hostname column to enable the ellipses. Closes-Bug: #1561402 - The sparklines were not visible in firefox as they were going out of view due to the width. Fixed it by setting the width to inherit.

--- a/webroot/css/contrail.layout.css
+++ b/webroot/css/contrail.layout.css
@@ -2442,6 +2442,7 @@ button.btn:active {
     stroke-width: 1;
     fill: none;
     height: 15px;
+    width:inherit;
 }
 
 .green-sparkline {
